# solana-voting

./: Details.txt  VotingCLIOutput.txt  backupkeys.txt  index.js  package.json  scratch.cjs  setup.js
acc/: voter_1.json  voter_2.json
contract/: Cargo.toml
contract/src/: lib.rs  scratch.rs
