cargo-features = ["edition2021"]
[package]
name = "solana-voting-contract"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[dependencies]
solana-program = "1.6.12"
borsh = "0.9"
solana-validator = { version = "1.6.12", optional = true }

[features]
test-bpf = ["solana-validator"]

[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "1.6.12"
solana-sdk = "1.6.12"

[lib]
crate-type = ["cdylib", "lib"]
